@@ -5,10 +5,15 @@ Please visit http://aegisub.net to download latest version
 
 - New Aegisub logo. (AMZ)
 - Automation 4 has replaced Automation 3, see the help file for more details (jfs)
-  o Automation 4 Lua uses Lua 5.1 instead of 5.0, meaning some new language features
+  o Automation 4 Lua uses Lua 5.1 instead of 5.0, meaning some new language features:
   o It is now possible to write macros that manipulate subtitles directly
   o Scripts have full access to the entire subtitle file, not just the "Events" section
-- Visual Typesetting functionality implemented, which should make typesetting much easier and faster. (AMZ)
+- Visual Typesetting functionality implemented, which should make typesetting much easier and faster. It supports: (AMZ)
+  o Dragging;
+  o Rotation on Z axis;
+  o Rotation on X/Y axes;
+  o Scaling on X/Y axes;
+  o Clipping to a rectangle.
 - Support reading SSA/ASS files with intermixed V4 and V4+ Styles sections. (jfs)
 - Fixed loading of sections with unexpected cases. (AMZ)
 - Changes to Audio Spectrum: (jfs)
